<resources>
    <string name="app_name">base_exp_1</string>
    <string name="note">请输入您的注册信息：</string>
    <string name="userName">用户名：</string>
    <string name="password">密码：</string>
    <string name="sex">性别：</string>
    <string name="major">身份</string>
    <string name="register">注册</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string-array name="jobs">
        <item>开发者</item>
        <item>设计师</item>
    </string-array>
    <string name="login">登陆</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="registerNow">立即注册</string>
</resources>